Import of FREW/DBIx-Class-Helpers-0.093000.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Class-Helpers
gitpan-cpan-version:      0.093000
gitpan-cpan-path:         FREW/DBIx-Class-Helpers-0.093000.tar.gz
gitpan-cpan-author:       FREW
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for DBIx-Class-Helpers
 
+0.093000 Sat Oct 26 19:40:00 CDT 2009
+       - Add parent as a dependency
+       - Super basic POD cleanup
+       - Tighter Restrictions on the namespaces of parent classes
+
 0.092970 Sat Oct 24 02:41:00 CDT 2009
        - Initial Release
 
