--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     DBIx::Class::Helpers - Simplify the common case stuff for DBIx::Class.
 
 VERSION
-    version 2.00000_2
+    version 2.00000
 
 SYNOPSIS
      package MyApp::Schema::Result::Foo_Bar;
