Import of FREW/DBIx-Class-Helpers-2.031000.tar.gz from CPAN.
gitpan-cpan-distribution: DBIx-Class-Helpers
gitpan-cpan-version:      2.031000
gitpan-cpan-path:         FREW/DBIx-Class-Helpers-2.031000.tar.gz
gitpan-cpan-author:       FREW
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -44,5 +44,5 @@ SYNOPSIS
 SEE ALSO
 
     DBIx::Class::Helper::Row::JoinTable,
-    DBIx::Class::Helper::ResultSet::SubClass, DBIx::Class::Helpers::Util
+    DBIx::Class::Helper::Row::SubClass, DBIx::Class::Helpers::Util
 
